--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <title>Bikcraft - Bicicletas Elétricas</title>
   <meta name="description" content="Bicicletas elétricas  de alta precisão e qualidade,
   feitas sob medida para o cliente. Explore o 
-  mundo na sua velocidade com a Bikcraft. ">
-
-  <link rel="stylesheet" href="./style.css">
+  mundo na sua velocidade com a Bikcraft.">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,5 +30,23 @@
     </nav>
   </div>
   </header>
+
+  <main class="introducao-bg">
+    <div class="introducao">
+      <div class="introducao-conteudo">
+      <h1 class="texto-grande cor-0">Bicicletas feitas 
+        sob medida<span class="cor-p1">.</span></h1>
+        <p class="texto-medio cor-5">Bicicletas elétricas  de alta precisão e qualidade,
+          feitas sob medida para o cliente. Explore o 
+          mundo na sua velocidade com a Bikcraft. </p>
+          <a class="botao" href="./bicicletas.html">Escolha a sua</a>
+        </div>
+        <div>
+          <img src="./img/0827-favicon/bikcraft-arquivos/img/fotos/introducao.jpg" alt="bicicleta elétrica preta">
+        </div>
+    </div>
+
+  </main>
+  <h2 class="texto-grande">Escolha a sua.</h2>
 </body>
 </html>
