--- a/bicicletas.html
+++ b/bicicletas.html
@@ -68,46 +68,40 @@
               </li>
       </ul>
       <a class="botao seta"  href="./bicicletas/nimbus.html">Mais Sobre</a>
-
-
       </div>
-
     </div>
-
   </div>
 
   <div class="bicicletas-bg">
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/magic.jpg" alt="Bicicletas preta">
-        <span class="font-2-m cor-0"> R$ 4999</span>
+        <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta">
+        <span class="font-2-m cor-0">R$ 2499</span>
       </div>
-        <div class="bicicletas-conteudo">
-     <h2 class="font-1-xl cor-0">Magic Might</h2>
-     <p class="font-2-s cor-5">A Magic Might  é a melhor  Bikcraft já criada pela nossa
-      equipe. Ela vem equipada com os melhores acessórios,
-      o que garente maior velocidade.</p>
-      <ul class="font-1-m cor-5">
-        <li><img src="./img/icones/eletrica.svg" alt="">
-        Motor Elétrico
-        </li>
-        <li><img src="./img/icones/carbono.svg" alt="">
-          Fibra de Carbono
+      <div class="bicicletas-conteudo">
+        <h2 class="font-1-xl cor-0">Magic Might</h2>
+        <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <ul class="font-1-m cor-5">
+          <li>
+            <img src="./img/icones/eletrica.svg" alt="">
+            Motor Elétrico
           </li>
-          <li><img src="./img/icones/velocidade.svg" alt="">
+          <li>
+            <img src="./img/icones/carbono.svg" alt="">
+            Fibra de Carbono
+          </li>
+          <li>
+            <img src="./img/icones/velocidade.svg" alt="">
             45 km/h
-            </li>
-            <li><img src="./img/icones/rastreador.svg" alt="">
-              Rastreador
-              </li>
-      </ul>
-      <a class="botao seta"  href="./bicicletas/magic.html">Mais Sobre</a>
-
-
+          </li>
+          <li>
+            <img src="./img/icones/rastreador.svg" alt="">
+            Rastreador
+          </li>
+        </ul>
+        <a class="botao seta" href="./bicicletas/magic.html">Mais Sobre</a>
       </div>
-
     </div>
-
   </div>
 
   <div class="bicicletas-bg">
@@ -136,12 +130,10 @@
               </li>
       </ul>
       <a class="botao seta"  href="./bicicletas/nebula.html">Mais Sobre</a>
-
       </div>
-
     </div>
-
   </div>
+
 </main>
 
   <footer class="footer-bg">
