--- a/index.html
+++ b/index.html
@@ -51,26 +51,26 @@
 
   </main>
 
-  <article class="bicicletas-lista">
-  <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
+  <article class="bicicletas-lista container">
+  <h2 class="font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
   <ul>
     <li>
       <a href="./bicicletas/magic.html">
-      <img src="/img/arquivos-cliente/fotos/bicicletas/magic.jpg" alt="bicicleta preta">
+      <img src="/img/bicicletas/magic-home.jpg" alt="bicicleta preta">
       <h3 class="font-1-xl">Magic Might</h3>
       <span class="font-2-m cor-8">R$ 4999</span>
     </a>
     </li>
     <li>
       <a href="./bicicletas/nimbus.html">
-      <img src="/img/arquivos-cliente/fotos/bicicletas/nimbus.jpg" alt="bicicleta preta">
+      <img src="/img/bicicletas/nimbus-home.jpg" alt="bicicleta preta">
       <h3 class="font-1-xl">Nimbus Stark</h3>
       <span class="font-2-m cor-8">R$ 4999</span>
     </a>
     </li>
     <li>
       <a href="./bicicletas/nebula.html">
-      <img src="/img/arquivos-cliente/fotos/bicicletas/nebula.jpg" alt="bicicleta preta">
+      <img src="/img/bicicletas/nebula-home.jpg" alt="bicicleta preta">
       <h3 class="font-1-xl">Nebula Cosmic</h3>
       <span class="font-2-m cor-8">R$ 3999</span>
     </a>
