--- a/seguros.html
+++ b/seguros.html
@@ -109,6 +109,50 @@
   </div>
   </article>
 
+<article class="perguntas container">
+  <h2 class="font-1-xxl">perguntas frequentes<span class="cor-p1">.</span></h2>
+
+  <dl>
+    <div>
+      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dd class="font-5-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+        Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro. </dd>
+    </div>
+    <div>
+      <dt class="font-1-m-b">Como posso entrar em contato</dt>
+      <dd class="font-5-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+        Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro. </dd>
+    </div>
+    <div>
+      <dt class="font-1-m-b">Vocês possuem algum desconto</dt>
+      <dd class="font-5-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+        Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro. </dd>
+    </div>
+    <div>
+      <dt class="font-1-m-b">Qual a garantia que possuo</dt>
+      <dd class="font-5-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+        Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro. </dd>
+    </div>
+    <div>
+      <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
+      <dd class="font-5-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+        Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro. </dd>
+    </div>
+    <div>
+      <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
+      <dd class="font-5-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+        Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro. </dd>
+    </div>
+    <div>
+      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dd class="font-5-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+        Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro. </dd>
+    </div>
+  </dl>
+
+
+</article>
+
 <footer class="footer-bg">
     <div class="footer container">
   <img src="./img/bikcraft.svg" alt="Bikcraft">
